--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,192 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+:root
+{
+    --background-color-when-hover:#ccc;
+}
 *{
     margin: 0;
     padding: 0;
+}
+#main{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+}
+
+#header{
+    height: 46px;
+    width: 100%;
+    background-color: black;
+    display: fixed;
+    font-family: 'Poppins',sans-serif;
+}
+
+.nav>.nav-element{
+  display: inline-block;
+  list-style: none;
+  position: relative;
+  
+}
+
+.nav-content{
+    text-decoration: none;
+    line-height: 46px;
+    color: white;
+    text-transform: uppercase;
+    padding: 0 25px;
+    display: inline-block;
+    font-weight: 700;
+
+}
+.nav-element:hover >.nav-content
+{
+    color: #000!important;
+    background-color:var(--background-color-when-hover) !important;
+}
+.nav-element:hover > .sub-nav
+{
+    display: block;
+}
+.sub-nav
+{
+    position: absolute;
+    list-style: none;
+    background-color: white;
+    box-shadow: 1px 2px 3px 3px rgb(160, 155, 155);
+    display: none;
+    
+}
+.sub-nav-content
+{
+    text-decoration:none;
+    color: #000;
+    display:block;
+    padding: 10px 12px;
+    padding-right: 20px;
+    
+}
+.sub-nav-element:hover> .sub-nav-content
+{
+    background-color:var(--background-color-when-hover);
+}
+.search
+{
+    position: absolute;
+    color:white;
+    background-color: #000;
+    top:0;
+    line-height: 46px;
+    right: 0px;
+    padding: 0 20px;
+}
+.search:hover
+{
+    background-color: red;
+}
+
+@media(min-width: 300px) { 
+  
+    #header{
+        height: 40px;
+    }
+    .nav-content{
+      
+        line-height: 40px;
+        padding: 0 10px;
+        font-weight: 700;
+        font-size: 12px;
+    
+    }
+    .nav-element:hover > .sub-nav
+    {
+        display: block;
+    }
+    .sub-nav-content
+    {
+        padding: 7px 12px;
+        padding-right: 20px;
+        font-size: 10px;
+        
+    }
+    .sub-nav-element:hover> .sub-nav-content
+    {
+        background-color:var(--background-color-when-hover);
+    }
+    .search
+    {
+        line-height: 40px;
+        padding: 0 10px;
+        font-size: 12px;
+    }
+}
+@media(min-width: 150px) { 
+  
+    #header{
+        height: 30px;
+    }
+    .nav-content{
+      
+        line-height: 30px;
+        padding: 0 8px;
+        font-weight: 700;
+        font-size: 10px;
+    
+    }
+    .nav-element:hover > .sub-nav
+    {
+        display: block;
+    }
+    .sub-nav-content
+    {
+        padding: 6px 10px;
+        padding-right: 15px;
+        font-size: 8px;
+        
+    }
+    .sub-nav-element:hover> .sub-nav-content
+    {
+        background-color:var(--background-color-when-hover);
+    }
+    .search
+    {
+        line-height: 30px;
+        padding: 0 8px;
+        font-size: 10px;
+    }
+}
+@media(min-width: 1024px) { 
+  
+    #header{
+        height: 50px;
+    }
+    .nav-content{
+      
+        line-height: 50px;
+        padding: 0 10px;
+        font-weight: 700;
+        font-size: 20px;
+    
+    }
+    .nav-element:hover > .sub-nav
+    {
+        display: block;
+    }
+    .sub-nav-content
+    {
+        padding: 6px 10px;
+        padding-right: 15px;
+        font-size: 20px;
+        
+    }
+    .sub-nav-element:hover> .sub-nav-content
+    {
+        background-color:var(--background-color-when-hover);
+    }
+    .search
+    {
+        line-height: 50px;
+        padding: 0 18px;
+        font-size: 20px;
+    }
 }
