fix hover button search

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -119,6 +119,10 @@
         padding: 0 10px;
         font-size: 12px;
     }
+    .search:hover
+    {
+        background-color: red;
+    }
 }
 @media(min-width: 150px) { 
   
