--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -20,6 +20,9 @@
     background-color: black;
     display: fixed;
     font-family: 'Poppins',sans-serif;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
 .nav>.nav-element{
