--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -8,6 +8,9 @@
     margin: 0;
     padding: 0;
 }
+html{
+    scroll-behavior: smooth;
+}
 #main{
     height: 100%;
     width: 100%;
@@ -49,15 +52,18 @@
 }
 .nav-element:hover > .sub-nav
 {
-    display: block;
+    box-shadow: 1px 2px 3px 3px rgb(160, 155, 155);
+    height: 130px;
 }
 .sub-nav
 {
     position: absolute;
     list-style: none;
     background-color: white;
-    box-shadow: 1px 2px 3px 3px rgb(160, 155, 155);
-    display: none;
+    display: block;
+    overflow: hidden;
+    height: 0;
+    transition: all linear 0.2s;
     
 }
 .sub-nav-content
@@ -80,199 +86,132 @@
     background-color: #000;
     top:0;
     line-height: 46px;
-    right: 0px;
+    right: 0;
     padding: 0 20px;
 }
 .search:hover
 {
     background-color: red;
 }
+/*nav-mobile*/
+.button-menu
+{
+    color: white;
+    font-size: 30px;
+    margin-left: 10px;
+    height: 46px;
+    line-height: 46px;
+}
+.nav-mobile
+{
+    position: fixed;
+    width: 50%;
+    background-color: white;
+    top:0;
+    left: 0;
+    height: 100%;
+    z-index: 101;
+    display: block;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: all linear 0.2s;
+
+}
+.nav-mobile-content
+{
+  display: block;
+  text-align: justify;
+  color:black;
+  text-decoration: none;
+  font-weight: 900;
+  padding: 10px 12px;
+  font-family: 'Poppins',sans-serif;
+  font-size: 30px;
+}
+.nav-mobile-element:hover > .nav-mobile-content
+{
+   background-color: var(--background-color-when-hover);
+   color: white;
+
+}
+
+.nav-mobile-element:hover > .sub-nav-mobile
+{
+   height: 130px;
+}
+.sub-nav-mobile
+{
+    background-color: rgb(54, 52, 52,0.5);
+    position: relative;
+    overflow: hidden;
+    height: 0;
+   transition: height linear 0.1s;
+
+}
+.sub-nav-mobile-content
+{
+    color: #333;
+    font-weight: 600;
+    text-decoration: none;
+    display: block;
+    padding: 10px 15px;
+}
+.sub-nav-mobile-element:hover > .sub-nav-mobile-content
+{
+       background-color: white;
+}
+.overlay
+{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top:0;
+    left: 0;
+    bottom: 0;
+    background-color:rgb(73, 71, 71,0.3);
+    opacity: 0;
+    display: none;
+    transition: all linear 0.2s;
+
+}
+.button-close
+{
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 40px;
+}
+.check
+{
+    position: absolute;
+    right: 30px;
+    z-index: 999;
+    display: none;
+}
+.check:checked ~ .overlay
+{
+    opacity: 1;
+   display: block;
+}
+.check:checked ~ .nav-mobile
+{
+    opacity: 1;
+    transform: translateX(0%);
+}
 /*responsive*/
-/*màn hình nhỏ*/
-@media screen and (max-width: 240px) { 
-  
-    #header{
-        height: 20px;
+/* tablet
+*/
+@media screen and (max-width:767px){
+    .nav{
+        display: none;
     }
-    .nav-content{
-      
-        line-height: 20px;
-        padding: 0 5px;
-        font-weight: 700;
-        font-size: 7px;
-    
-    }
-    .nav-element:hover > .sub-nav
-    {
-        display: block;
-    }
-    .sub-nav-content
-    {
-        padding: 7px 12px;
-        padding-right: 20px;
-        font-size: 7px;
-        
-    }
-    .sub-nav-element:hover> .sub-nav-content
-    {
-        background-color:var(--background-color-when-hover);
-    }
-    .search
-    {
-        line-height: 20px;
-        padding: 0 10px;
-        font-size: 7px;
-    }
-    
 }
 
-/*iphone*/
-@media screen and (max-width: 320px) { 
-  
-    #header{
-        height: 25px;
+@keyframes changeHeight {
+    from{
+        height: 0;
     }
-    .nav-content{
-      
-        line-height: 25px;
-        padding: 0 3px;
-        font-weight: 700;
-        font-size: 5px;
-    
+    to{
+        height: 100%;
     }
-    .nav-element:hover > .sub-nav
-    {
-        display: block;
-    }
-    .sub-nav-content
-    {
-        padding: 7px 12px;
-        padding-right: 20px;
-        font-size: 10px;
-        
-    }
-    .sub-nav-element:hover> .sub-nav-content
-    {
-        background-color:var(--background-color-when-hover);
-    }
-    .search
-    {
-        line-height: 25px;
-        padding: 0 10px;
-        font-size: 10px;
-    }
-    
-}
-/*table nho */
-@media screen and (max-width: 480px) { 
-  
-    #header{
-        height: 30px;
-    }
-    .nav-content{
-      
-        line-height: 30px;
-        padding: 0 10px;
-        font-weight: 700;
-        font-size: 12px;
-    
-    }
-    .nav-element:hover > .sub-nav
-    {
-        display: block;
-    }
-    .sub-nav-content
-    {
-        padding: 7px 12px;
-        padding-right: 20px;
-        font-size: 10px;
-        
-    }
-    .sub-nav-element:hover> .sub-nav-content
-    {
-        background-color:var(--background-color-when-hover);
-    }
-    .search
-    {
-        line-height: 30px;
-        padding: 0 10px;
-        font-size: 10px;
-    }
-    
-}
-/*ipad doc*/
-@media screen and (max-width: 768px) { 
-  
-    #header{
-        height: 42px;
-    }
-    .nav-content{
-      
-        line-height: 42px;
-        padding: 0 10px;
-        font-weight: 700;
-        font-size: 12px;
-    
-    }
-    .nav-element:hover > .sub-nav
-    {
-        display: block;
-    }
-    .sub-nav-content
-    {
-        padding: 7px 12px;
-        padding-right: 20px;
-        font-size: 10px;
-        
-    }
-    .sub-nav-element:hover> .sub-nav-content
-    {
-        background-color:var(--background-color-when-hover);
-    }
-    .search
-    {
-        line-height: 42px;
-        padding: 0 10px;
-        font-size: 10px;
-    }
-    
-}
-/* Ipad ngang */
-@media screen and (max-width: 1024px) { 
-  
-    #header{
-        height: 46px;
-    }
-    .nav-content{
-      
-        line-height: 46px;
-        padding: 0 10px;
-        font-weight: 700;
-        font-size: 15px;
-    
-    }
-    .nav-element:hover > .sub-nav
-    {
-        display: block;
-    }
-    .sub-nav-content
-    {
-        padding: 7px 12px;
-        padding-right: 20px;
-        font-size: 10px;
-        
-    }
-    .sub-nav-element:hover> .sub-nav-content
-    {
-        background-color:var(--background-color-when-hover);
-    }
-    .search
-    {
-        line-height: 46px;
-        padding: 0 10px;
-        
-    }
-    
-}
-
-
+ }
