--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,224 +2,181 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 :root
 {
-    --background-color-when-hover:#ccc;
+   --background-color:rgb(0,0,0);
+   --background-color-hover:rgb(201,201,201);
 }
-*{
+*{  
     margin: 0;
     padding: 0;
-}
-html{
     scroll-behavior: smooth;
 }
-#main{
-    height: 100%;
-    width: 100%;
-    background-color: white;
+.col_3
+{
+    width: cacl(100%/3);
+}
+.col_haft
+{
+    width: 50%;
+}
+.col{
+    width: 100vw;
+    margin-left: -8px;
+    margin-right:-8px;
+    padding: 0 8px;
 }
 
-#header{
+#header
+{
+    position: fixed;
+    z-index: 1px;
     height: 46px;
-    width: 100%;
-    background-color: black;
-    display: fixed;
-    font-family: 'Poppins',sans-serif;
-    position: relative;
+    background-color: var(--background-color);
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: space-between;
 }
-
-.nav>.nav-element{
-  display: inline-block;
-  list-style: none;
-  position: relative;
-  
-}
-
-.nav-content{
-    text-decoration: none;
-    line-height: 46px;
-    color: white;
-    text-transform: uppercase;
-    padding: 0 25px;
-    display: inline-block;
-    font-weight: 700;
-
-}
-.nav-element:hover >.nav-content
+.nav-header
 {
-    color: #000!important;
-    background-color:var(--background-color-when-hover) !important;
-}
-.nav-element:hover > .sub-nav
-{
-    box-shadow: 1px 2px 3px 3px rgb(160, 155, 155);
-    height: 130px;
-}
-.sub-nav
-{
-    position: absolute;
-    list-style: none;
-    background-color: white;
-    display: block;
-    overflow: hidden;
-    height: 0;
-    transition: all linear 0.2s;
+    display: flex;
     
 }
-.sub-nav-content
-{
-    text-decoration:none;
-    color: #000;
-    display:block;
-    padding: 10px 12px;
-    padding-right: 20px;
-    
-}
-.sub-nav-element:hover> .sub-nav-content
-{
-    background-color:var(--background-color-when-hover);
-}
-.search
-{
-    position: absolute;
-    color:white;
-    background-color: #000;
-    top:0;
-    line-height: 46px;
-    right: 0;
-    padding: 0 20px;
-}
-.search:hover
-{
-    background-color: red;
-}
-/*nav-mobile*/
-.button-menu
-{
-    color: white;
-    font-size: 30px;
-    margin-left: 10px;
-    height: 46px;
-    line-height: 46px;
-}
-.nav-mobile
-{
-    position: fixed;
-    width: 50%;
-    background-color: white;
-    top:0;
-    left: 0;
-    height: 100%;
-    z-index: 101;
-    display: block;
-    transform: translateX(-100%);
-    opacity: 0;
-    transition: all linear 0.2s;
 
-}
-.nav-mobile-content
+.nav-header li
 {
-  display: block;
-  text-align: justify;
-  color:black;
-  text-decoration: none;
-  font-weight: 900;
-  padding: 10px 12px;
-  font-family: 'Poppins',sans-serif;
-  font-size: 30px;
-}
-.nav-mobile-element:hover > .nav-mobile-content
-{
-   background-color: var(--background-color-when-hover);
-   color: white;
-
-}
-
-.nav-mobile-element:hover > .sub-nav-mobile
-{
-   height: 9.375em;
-}
-.sub-nav-mobile
-{
-    background-color: rgb(54, 52, 52,0.5);
     position: relative;
-    overflow: hidden;
-    height: 0;
-   transition: height linear 0.1s;
-
-}
-.sub-nav-mobile-content
-{
-    color: #333;
-    font-weight: 600;
-    text-decoration: none;
+    list-style: none;
     display: block;
-    padding: 10px 15px;
+    
 }
-.sub-nav-mobile-element:hover > .sub-nav-mobile-content
+.nav-header > li > .nav__header-content
 {
-       background-color: white;
+    text-decoration: none;
+    color:white;
+    font-family: 'Poppins',sans-serif;
+    display: block;
+    line-height: 46px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: linear 0.5s;
+    padding: 0px 20px;
+    vertical-align: middle;
+
 }
-.overlay
+.sub__header-nav
 {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top:0;
+    position: absolute;
     left: 0;
-    bottom: 0;
-    background-color:rgb(73, 71, 71,0.3);
-    opacity: 0;
-    display: none;
-    transition: all linear 0.2s;
+    display: block;
+    box-shadow: 1px 2px 3px 4px rgba(22, 20, 20, 0.089); 
+    overflow-y: hidden;
+    height: 0;
+    
+}
+.sub__header-nav li .sub__element_header-nav
+{
+    display: block !important;
+    text-decoration: none;
+    color:#000;
+    font-family: 'Poppins',sans-serif;
+    padding: 10px 20px;
+    text-align: center;
+    font-weight: 500;
+    transition: linear 0.5s;
 
 }
-.button-close
+.sub__header-nav li:hover .sub__element_header-nav
 {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    font-size: 40px;
+    background-color: var(--background-color-hover);
 }
-.check
+.nav-header  li:hover  .nav__header-content
 {
-    position: absolute;
-    right: 30px;
-    z-index: 999;
-    display: none;
+    background: var(--background-color-hover);
+    color: rgb(0,0,0);
+    background-clip: padding-box;
 }
-.check:checked ~ .overlay
+.nav-header  li:hover >.sub__header-nav{
+    height: 135px;
+    animation: InfadeHeight linear 0.15s;
+}
+@keyframes InfadeHeight
 {
-    opacity: 1;
-   display: block;
-}
-.check:checked ~ .nav-mobile
-{
-    opacity: 1;
-    transform: translateX(0%);
-}
-/*responsive*/
-/* tablet
-*/
-@media screen and (max-width:599px){
-    .nav{
-        display: none;
-    }
-    .search
+    0%
     {
-        font-size: 10px;
-    }
-    .button-menu
-    {
-        font-size: 10px;
-    }
-}
-
-@keyframes changeHeight {
-    from{
         height: 0;
     }
-    to{
+    33%
+    {
+        height: 50%;
+    }
+    66%
+    {
         height: 100%;
     }
- }
+}
+
+.search-btn .fa
+{
+   color: white;
+   font-size: 20xp;
+   line-height: 46px;
+   display: block;
+   width: 46px;
+   text-align: center;
+}
+.search-btn .fa:hover
+{
+    background:red;
+    transition: linear 0.5s;
+}
+.search-input
+{
+    position: absolute;
+    height: 36px;
+    width: 300px;
+    margin-top: 46px;
+    margin-right: 15px;
+    right: 0;
+    border: 2px solid rgb(12, 11, 11);
+    display: none;
+    transition: linear .25s;
+    z-index: 4;
+    -webkit-backdrop-filter: blur(20px);
+     
+}
+.search-input::-webkit-input-placeholder
+{
+    content: "";
+    font-size: 15px;
+    margin-left: 10px;
+    position: absolute;
+    line-height: 32px;
+    
+}
+.search-input.active
+{
+    display: block;
+}
+.Input-out{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    z-index: 3;
+}
+.Input-out.active
+{
+    display: block;
+}
+.input-header
+{  position: absolute;
+  width: 100%;
+  text-align: ce
+}
+.search-input:focus-visible
+{
+   outline: none;
+}
