--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -158,18 +158,18 @@
 {
     display: block;
 }
-.Input-out{
-    position: absolute;
+.Input{
+    position: fixed;
     top: 0;
     left:0;
-    width: 100%;
-    height: 100vh;
     display: none;
-    z-index: 3;
+    z-index: 100;
 }
-.Input-out.active
+.Input.active
 {
-    display: block;
+    display: block !important;
+    width: 100%;
+    height: 100vh !important;
 }
 .input-header
 {  position: absolute;
