--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -158,7 +158,7 @@
 {
     display: block;
 }
-.Input-out{
+.Input{
     position: absolute;
     top: 0;
     left:0;
@@ -167,7 +167,7 @@
     display: none;
     z-index: 3;
 }
-.Input-out.active
+.Input.active
 {
     display: block;
 }
