--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -205,19 +205,20 @@
   background-size: 100% 100% !important;
   position: relative;
  background-position:center;
+   background-repeat: no-repeat;
 
 }
 #slider .sliders .slide:nth-child(1)
 {
-    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/ny.jpg') no-repeat;
+    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/ny.jpg') ;
 }
 #slider .sliders .slide:nth-child(2)
 {
-    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/chicago.jpg') no-repeat ;
+    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/chicago.jpg')  ;
 }
 #slider .sliders .slide:nth-child(3)
 {
-    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/la.jpg') no-repeat ;
+    background: url('https://github.com/GitCuaManhNe-Ahihi/f8-webband/tree/develop/assets/image/la.jpg') ;
 }
 .text-slide
 {
