--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -214,7 +214,7 @@
 }
 #slider .sliders .slide:nth-child(2)
 {
-    background: url(“../develop/assets/image/chicago.jpg”)  ;
+    background: url("f8-webband/assets/image/chicago.jpg”)  ;
 }
 #slider .sliders .slide:nth-child(3)
 {
