--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -258,6 +258,7 @@
 {
     font-weight: 400;
     margin: 10px auto;
+    text-transform: uppercase;
 }
 .heading p
 {
@@ -294,4 +295,204 @@
    width: 100%;
    
 }
+#tour-date
+{
+    width: 100%;
+    position: relative;
+    top:0;
+    left: 0;
+    padding: 50px 10px;
+    text-align: center;
+    background-color: black;
+    /**/
+}
+.schedule
+{
+    width: 740px;
+    list-style: none;
+    text-align: justify;
+    margin: 20px auto;
+    background-color: #fff;
+    font-family: 'Poppins',sans-serif;
+}
+.schedule li
+{
+    padding: 10px 20px;
+    display: block;
+    border-bottom: 2px rgba(0, 0, 0, 0.24) solid;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 15px;
+    position: relative;
+}
+#tour-date .heading
+{
+    color: #fff;
+}
+.schedule li:nth-child(1)::after,
+.schedule li:nth-child(2)::after
+{
+    content: "Sold out";
+    font-size: 15px;
+    margin-left: 20px;
+    padding: 2px 5px;
+    background-color: rgb(244,67,54);
+    font-weight: 500;
+    color: rgb(201,201,201);
+}
+.schedule li:nth-child(3)::after
+{
+    content: "3";
+    padding: 5px 7px;
+    color:rgb(201,201,201);
+    background-color: black;
+    position: absolute;
+    right: 20px;
+    border-radius: 70%;
+    line-height: 20px;
+}
+.tickets
+{
+    width: 740px;
+    display: flex;
+    justify-content: space-between;
+    margin: 40px auto;
+}
+.tickets .ticket
+{
+    width: 230px;
+    height:400px; 
+    background-color: #fff
+    
+    
+}
+.tickets .ticket img
+{
+    width: 100%;
+    height: 190px;
+    
+}
+.tickets .ticket img:hover
+{
+   opacity: 0.7;
+}
+.tickets .ticket .text{
+    width: 98%;
+    text-align: left;
+    padding: 10px 10px;
+    font-family: 'Poppins',sans-serif;
+    font-size: 15px;
+}
+.tickets .ticket .text h4
+{
+  padding:7px 0px;
+}
+.tickets .ticket .text p
+{
+    padding:7px 0px;
+}
+.tickets .ticket .text p:nth-child(2)
+{
+    opacity: 0.4 !important;
+}
+.tickets .ticket .text .btn-buy
+{
+    text-decoration: none;
+    font-weight: 600;
+    padding: 10px 10px;
+    color: rgb(250, 250, 250);
+    background: black;
+    margin-top: 10px !important;
+    display: inline-block;
+    transition: linear 0.25s;
+}
+.btn-pay:hover,
+.btn-close:hover,
+.btn-close:hover > .fa-times,
+.tickets .ticket .text .btn-buy:hover
+{
+    background-color: var(--background-color-hover);
+    color: black;
+}
+.ticket-sell
+{
+    background-color: #fff;
+    width: 700px;
+    position: fixed;
+    top:100px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 500px;
+    font-family: 'Poppins',sans-serif;
+    opacity: 0;
+    display: none;
+    transform: translateY(-500px);
+    transition: all linear 0.3s;
+    
 
+}
+.ticket-sell h1{
+    display: inline-block;
+    height: 130px;
+    line-height: 130px;
+    background-color: rgb(0,150,136);
+    width: 100%;
+    padding: 20px 0;
+    color: #fff;
+}
+.ticket-sell p
+{
+    text-align: left;
+    padding: 10px;
+    font-size: 15px;
+}
+.ticket-sell input
+{
+    height: 36px;
+    width: 97%;
+}
+.btn-pay
+{
+    display: inline-block;
+    width: 97%;
+    padding: 10px 0px;
+    margin-top: 20px;
+    color: #fff;
+    background-color: rgb(0,150,136);
+    text-decoration: none;
+    transition: linear 0.2s;
+}
+
+.foot-ticket
+{
+   
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+    margin-top: 40px;
+}
+.foot-ticket > a
+{
+    text-decoration: none;
+    color: #fff;
+    padding:5px 10px;
+    background-color:rgb(244,67,54) ;
+    font-size: 20px !important;
+  
+}
+.foot-ticket> a .fa-times{
+   position:unset;
+   font-size: 20px !important;
+}
+.ticket-sell .fa-times
+{
+    right: 10px;
+    top: 10px;
+
+}
+.ticket-sell.active{
+    opacity: 1;
+    transform: translateY(0);
+    display: block;
+}
