--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -496,3 +496,74 @@
     transform: translateY(0);
     display: block;
 }
+#contact
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 50px 0px;
+    text-align: center;
+    font-family: 'Poppins',sans-serif;
+}
+.form-contact
+{
+    width: 740px;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-between;
+}
+.form-contact .infor-address
+{
+     text-align: left;
+     color: black !important;
+     
+}
+.form-contact .infor-address p{
+    opacity: 1;
+}
+.form-contact .infor-address p >.fa
+{
+    font-size: 16px;
+    width: 20px;
+}
+.form-contact .form
+{   width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+    padding-bottom: 50px;
+   
+}
+.form-contact .form input::placeholder
+{
+    position: absolute;
+    line-height: 36px;
+    padding: 0 10px;
+}
+.form-contact .form .email,
+.form-contact .form .name
+{
+   flex-basis: 48%;
+   height: 36px;
+   margin-bottom: 10px;
+}
+.form-contact .form .message
+{
+    flex-basis: 100%;
+    height: 36px;
+}
+
+.send-btn
+{
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+    padding: 5px 15px;
+    background-color: black;
+    margin: 10px 0px;
+    position:absolute;
+    right: 0;
+    bottom: -10px;
+    
+}
