--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -301,7 +301,7 @@
     position: relative;
     top:0;
     left: 0;
-    padding: 50px 10px;
+    padding: 50px 0;
     text-align: center;
     background-color: black;
     /**/
