--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -567,3 +567,9 @@
     bottom: -10px;
     
 }
+#map
+{
+    width: 100%;
+    height: 100vh;
+    background: url(../image/map.jpg) no-repeat center/ 100% 100%;
+}
