--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -214,7 +214,7 @@
     .form-contact
     {
         width: 98%;
-        margin: 50px auto;
+        margin: 20px auto;
         flex-direction: column-reverse;
     }
     .form-contact .form,
@@ -226,5 +226,12 @@
     .form-contact .form .email
     {
         width: 48%;
+    }
+}
+@media screen and (max-width:750px)
+{
+    #map
+    {
+        height: 260px;
     }
 }
